designing header and fixing spacing

--- a/src/app.css
+++ b/src/app.css
@@ -10,16 +10,31 @@
   --gap: 2vh;
 
   /* RATIOS */
-  --subtitle-to-title: calc(24.5 / 70);
-  --body-to-subtitle: calc(10 / 24.5);
+  --subtitle-to-title: calc(23 / 70);
+  --nav-to-subtitle: calc(12 / 22.5);
+  --body-to-subtitle: calc(8 / 22.5);
 
   /* FONT-SIZES */
   --title: 12vw;
   --subtitle: calc(var(--title) * var(--subtitle-to-title));
+  --nav: calc(var(--subtitle) * var(--nav-to-subtitle));
   --body: calc(var(--subtitle) * var(--body-to-subtitle));
 
+  /* LETTER SPACING*/
+  --letter-spacing-ratio: 0.05;
+  --title-letter-spacing: calc(var(--title) * var(--letter-spacing-ratio));
+  --subtitle-letter-spacing: calc(
+    var(--subtitle) * var(--letter-spacing-ratio)
+  );
+  --body-letter-spacing: calc(var(--body) * var(--letter-spacing-ratio));
+
   /* LINE HEIGHT */
-  --title-line-height: var(--title);
+  --line-height: 0.8;
+
+  /* HEADER PADDING/MARGINS */
+  --banner-margins: calc(var(--subtitle) / 4);
+  --title-subtitle-gap: calc(var(--banner-margins) * 2);
+  --subtitle-padding: calc(var(--banner-margins) / 2);
 
   font-family: var(--font-body);
   color: var(--color-text);
@@ -32,20 +47,8 @@ body {
   font-family: var(--font-body);
 }
 
-.title {
-  font-size: var(--title);
-  /* font-weight: 700; */
-  letter-spacing: 0.25rem;
-  line-height: 10vh;
-}
-
-.subtitle {
-  font-size: var(--subtitle);
-  /* font-weight: 400; */
-  letter-spacing: 0.1rem;
-}
-
 .content-title {
+  font-size: var(--nav);
   margin-bottom: var(--gap);
 }
 
@@ -83,4 +86,10 @@ button:focus:not(:focus-visible) {
 @font-face {
   font-family: "Garamond-Narrow";
   src: url("./lib/fonts/itc-garamond-std-book-narrow.otf");
+}
+
+@media screen and (max-width: 480px) {
+  :root {
+    --gap: 0.5vh;
+  }
 }
